tests/should-pass/adaptors/copy.fk
-- #desc Copy some instances via adaptor
-- #return [pair false false, pair false true, pair true false, pair true true]

data Pair X Y = pair X Y

interface BChoice = choose: Bool

fixTrue: {<BChoice>X -> X}
fixTrue x = x
fixTrue <choose -> k> = fixTrue (k true)

fixFalse: {<BChoice>X -> X}
fixFalse x = x
fixFalse <choose -> k> = fixFalse (k false)

prog: {[BChoice, BChoice]Pair Bool Bool}
prog! = pair (choose!) (<BChoice> choose!)

ff: {Pair Bool Bool}
ff! = fixTrue (fixFalse (fixTrue (fixFalse (<BChoice(s d c b a -> s d c b a a)> prog!))))

ft: {Pair Bool Bool}
ft! = fixTrue (fixFalse (fixTrue (fixFalse prog!)))

tf: {Pair Bool Bool}
tf! = fixTrue (fixFalse (fixTrue (fixFalse (<BChoice(s d c b a -> s d c b)> prog!))))

tt: {Pair Bool Bool}
tt! = fixTrue (fixFalse (fixTrue (fixFalse (<BChoice(s d c b a -> s d c b b a), BChoice(s e d c b a -> s e d c b)> prog!))))

main: {List (Pair Bool Bool)}
main! = [ff!, ft!, tf!, tt!]
