tests/should-fail/adaptors/rem.fk
-- #desc Remove an instance that is not there
-- #return Adaptor BChoice(Just 10, 9, 3, 2, 1, 0) is not a valid adaptor in ambient [£ | BChoice , BChoice , BChoice , BChoice] (line 20 , column 46)

data Pair X Y = pair X Y

interface BChoice = choose: Bool

fixTrue: {<BChoice>X -> X}
fixTrue x = x
fixTrue <choose -> k> = fixTrue (k true)

fixFalse: {<BChoice>X -> X}
fixFalse x = x
fixFalse <choose -> k> = fixFalse (k false)

prog: {[BChoice, BChoice]Pair Bool Bool}
prog! = pair (choose!) (<BChoice> choose!)

ff: {Pair Bool Bool}
ff! = fixTrue (fixFalse (fixTrue (fixFalse (<BChoice(s j i h g f e d c b a -> s j d c b a)> prog!))))

main: {Unit}
main! = unit
